--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import-normalize; /* bring in normalize.css styles */
 
+
 body {
+
+  /* My background color */
+  background-color: rgb(89, 89, 89);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
